@@ -1,3 +1,8 @@
+2009-04-02  Sterling Augustine  <sterling@jaw.hq.tensilica.com>
+
+	* elf32-xtensa.c (relax_property_section): Always set r_offset 
+	to zero.
+
 2009-04-02  Christophe Lyon  <christophe.lyon@st.com>
 
 	* elf32-arm.c (elf32_arm_stub_long_branch_v4t_thumb_thumb,
